@@ -31,6 +31,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #9501: Fixed logging regressions in cleanup code.
+
 - Issue #9214: Set operations on KeysView or ItemsView in the collections
   module now correctly return a set.  (Patch by Eli Bendersky.)
 
